--- a/sass/2/1/_variable-1.scss
+++ b/sass/2/1/_variable-1.scss
@@ -1,6 +1,6 @@
 ////////////////////////////////////////////////////////////// 最简配置
-$main-color: #e64833;   //主色
-$color: #767881;        //通用文字色
+// $main-color: #e64833;   //主色
+// $color: #767881;        //通用文字色
 
 
 
