--- a/sass/7/1/_variable-1.scss
+++ b/sass/7/1/_variable-1.scss
@@ -2,7 +2,6 @@
 $main-color: #e64833;   //主色
 $color: #767881;        //通用文字色
 
-
 ////////////////////////////////////////////////////////////// 复杂配置
 // $main-color: #e64833;   //主色
 // $color: #a1a1a1;        //通用文字色
@@ -22,8 +21,10 @@ $color: #767881;        //通用文字色
 
 //tool bar
 // $bar-bgcolor: $main-color; 
-// $bar-color: #fadfdc;
+// $bar-color: #fadfdc; 
 // $bar-hover-color: #fff;
+// $bar-deep-color: $bar-color;
+// $bar-light-color: #ef948b;
 
 $deep-color: #fadfdc;
 $light-color: #ef948b;
