--- a/sass/_pc.scss
+++ b/sass/_pc.scss
@@ -29,12 +29,6 @@ $nav-bgcolor2: $nav-bgcolor!default;
             text-align: center;
         }
 
-        &.separator {
-            a, a:hover, a:visited {
-                color: $nav-light-color;
-            }
-        } 
-        
         &:hover {
             & > .dropdown {
                 display: block;
@@ -94,7 +88,7 @@ $nav-bgcolor2: $nav-bgcolor!default;
 }
 }
 
-@mixin operator-bar-1($height: 50px, $width: 30px, $margin-right: 15px) {
+@mixin operator-bar-1($height: 50px, $width: 30px, $margin-right: 15px, $deepColor: $deep-color, $lightColor: $light-color) {
 
     .operator-bar-1 { //搜索，登录注册，语言
       
@@ -107,13 +101,22 @@ $nav-bgcolor2: $nav-bgcolor!default;
             & > a {
                 height: $width;
                 border-radius: 50%;
-                border: 1px solid $color;
+                border: 1px solid $lightColor;
                 &:hover {
                     border-color: $main-color;
                 }
                 line-height: $width;
                 width: 100%;
+
                 @include center(vertical);
+
+                &, i {
+                    color: $deepColor;
+                }
+
+                .icon-arrow-down {
+                    color: $lightColor;
+                }
             }
             
             &.search {
@@ -122,7 +125,7 @@ $nav-bgcolor2: $nav-bgcolor!default;
                     @include center(vertical);
                     height: $width;
                     width: 100%;
-                    border: 1px solid $color;
+                    border: 1px solid $lightColor;
                     border-radius: $width / 2;
                     text-align: left;
                     padding: 0 #{$width - 2px} 0 0;
@@ -141,17 +144,40 @@ $nav-bgcolor2: $nav-bgcolor!default;
 }  
 
 // 登录 | 注册 中
-@mixin operator-bar-2($height: 50px, $margin-right: 15px) {
+@mixin operator-bar-2($height: 50px, $margin-right: 15px, $deepColor: $deep-color, $lightColor: $light-color) {
     .operator-bar-2 { //搜索，登录注册，语言
         @include operator-bar($height, $margin-right);
         & > li {
 
-            & > a {
+            & > a, & > .separator {
                 line-height: $height;
-                .icon-arrow-down {
-                    margin-left: 5px;
-                }
             }
+
+            & > a {
+                color: $deepColor;
+            }
+
+            & > .separator, & > a .icon-arrow-down {
+                color: $lightColor;
+            }
+
+
+
+            // & > a, & > .seperator {
+            //     line-height: $height;
+            //     .icon-arrow-down {
+            //         margin-left: 5px;
+            //     }
+            //     color: $deepColor;
+            // }
+
+            // & > .seperator {
+            //     color: $lightColor;
+            // }
+
+            // & > a i {
+            //     color: $deepColor;
+            // }
 
             &.search {
                 form {
@@ -214,12 +240,44 @@ $nav-bgcolor2: $nav-bgcolor!default;
 @mixin contact-info2($height,$margin-right: 15px) {
     .contact-info2 {
         line-height: $height;
-        @include floatLi($margin-right); 
+        @include floatLi($margin-right);
+        color: $deep-color;
         .iconfont {
             line-height: 1;
             margin-right: 5px;
+            color: $light-color;
         }
     }
+}
+
+@mixin search-container($height: 30px, $width: 200px, $padding: 1px) {
+   .search-container {
+        background: $main-color;
+        padding: $padding;
+
+        input {
+            float: left;
+            border: none;
+            outline: none;
+            padding: 0 5px;
+            height: $height;
+            width: $width;
+        } 
+
+        a {
+            display: block;
+            float: left;
+            width: $height - $padding;
+            height: $height;
+            line-height: $height;
+            text-align: center;
+            color: $nav-color;
+            &:hover {
+                color: $nav-hover-color;
+            }
+        }
+   }
+   
 }
 
 @mixin share() {
@@ -277,10 +335,13 @@ body {
 
                         @include opacity(0);
 
+                        &:hover {
+                            color: $nav-hover-color;
+                        }
+
                         &.show {
                             @include opacity(1);
                         }
-                        
                      }
 
                      #menu-nav-prev {
