--- a/sass/2/_structure.scss
+++ b/sass/2/_structure.scss
@@ -5,7 +5,6 @@ $menu-nav-position: center;
 // $mobile-header-split-color: blue!default;
 
 $header-top-height: 256px;
-$header-split-color: #eaeaea; // 分割线颜色
 
 @import "../mobile";
 @import "../pc";
@@ -62,7 +61,7 @@ $header-split-color: #eaeaea; // 分割线颜色
                         border-top-width: 0;
                         border-left-width: 0;
                         border-right-width: 0;
-                        border-bottom-color: $header-split-color;
+                        border-bottom-color: $deep-color;
                     }
                } 
            } 
@@ -70,7 +69,7 @@ $header-split-color: #eaeaea; // 分割线颜色
         }
 
         .top-container {
-            border-bottom: 1px solid $header-split-color;
+            border-bottom: 1px solid $split-color;
         }
 
         &.search-open {
@@ -83,6 +82,6 @@ $header-split-color: #eaeaea; // 分割线颜色
     }
 
     .content {
-        padding-top: $menu-nav-height;
+        padding-top: $menu-nav-height + $header-top-height;
     }
 }
