--- a/sass/4/_structure.scss
+++ b/sass/4/_structure.scss
@@ -66,7 +66,7 @@ body {
         }
 
         .content {
-            padding-top: $menu-nav-height;
+            padding-top: $menu-nav-height + $header-top-height;
         }
     }
 }
