--- a/sass/_mixin.scss
+++ b/sass/_mixin.scss
@@ -172,3 +172,18 @@
     background: -moz-linear-gradient(right, $bgcolor1, $bgcolor2); /* Firefox 3.6 - 15 */
     background: linear-gradient(to right, $bgcolor1 , $bgcolor2); /* 标准的语法（必须放在最后） */
 }
+
+@mixin placeholder($color) {
+    &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+      color: $color;
+    }
+    &::-moz-placeholder { /* Firefox 19+ */
+      color: $color;
+    }
+    &:-ms-input-placeholder { /* IE 10+ */
+      color: $color;
+    }
+    &:-moz-placeholder { /* Firefox 18- */
+      color: $color;
+    }
+}
