modify Header2 input bottom color

--- a/sass/2/_structure.scss
+++ b/sass/2/_structure.scss
@@ -61,7 +61,7 @@ $header-top-height: 256px;
                         border-top-width: 0;
                         border-left-width: 0;
                         border-right-width: 0;
-                        border-bottom-color: $deep-color;
+                        border-bottom-color: $light-color;
                     }
                } 
            } 
