--- a/stylesheets/2/1/1.css
+++ b/stylesheets/2/1/1.css
@@ -973,7 +973,7 @@ body header .mobile-header-bar a:focus i {
     border-top-width: 0;
     border-left-width: 0;
     border-right-width: 0;
-    border-bottom-color: #a1a1a1;
+    border-bottom-color: #bfbfbf;
   }
   /* line 71, ../../../sass/2/_structure.scss */
   header .top-container {
