Finish all style

--- a/sass/2/_structure.scss
+++ b/sass/2/_structure.scss
@@ -76,7 +76,7 @@ $header-top-height: 256px;
             #searchInput {
                 height: $width;
                 padding-left: 0;
-                width: 200px;
+                // width: 200px;
             }
          } 
     }
